<resources>
    <string name="app_name">Iamantaras</string>
    <string name="app_name_caps">IAMANTARAS</string>
    <string name="masuk">Masuk</string>
    <string name="lupapassword">Lupa password?</string>
    <string name="belumpunyaakun">Belum punya akun?</string>
    <string name="daftarsekarang">Daftar sekarang</string>
    <string name="daftar">Daftar</string>
    <string name="mungkinkenal">Mungkin Anda Kenal</string>
    <string name="beranda">Beranda</string>
    <string name="update_prof">Update Profile</string>
    <string name="share">Share</string>
    <string name="welcome_message">Selamat datang IAMANTARAS\nuntuk memulai silahkan update profil Anda</string>
    <string name="teman">Teman</string>
    <string name="agenda">Agenda</string>
    <string name="forum">Forum</string>
    <string name="publikasi">Publikasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="iamantarab">IAMANTARAB</string>
    <string name="cariteman">Terhubung dengan teman-teman Anda\nsilahkan cari teman Anda</string>
    <string name="app_full_name_caps">IKATAN ALUMNI MAN TAMBAK BERAS</string>
    <string name="profile">Profil</string>
    <string name="usernotfriends">Pengguna yang belum menjadi teman Anda\ntidak dapat melihat data detail Anda</string>
    <string name="profesi_null">Belum ada data profesi / pengalaman, silahkan\ntambahkan data Anda.</string>
</resources>
