<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="135dp"
            android:layout_height="123dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/logo"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="140dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name_caps"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_mail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:hint="Email"
                android:letterSpacing="0.025"
                android:background="#00000000"
                android:textColorHint="#fff"
                android:textSize="16dp"
                android:padding="12dp"
                android:id="@+id/txtEmail" />




        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#fff"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:hint="Password"
                android:letterSpacing="0.025"
                android:background="#00000000"
                android:textColorHint="#fff"
                android:textSize="16dp"
                android:padding="12dp"
                android:id="@+id/txtPassword" />




        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#fff"
            />


    </LinearLayout>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textSize="16dp"
        android:textColor="#fff"
        android:textAlignment="center"
        android:background="@drawable/round"
        android:layout_gravity="center"
        android:letterSpacing="0.025"
        android:padding="10dp"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupapassword"
        android:textColor="#fff"
        android:letterSpacing="0.025"
        android:textSize="14dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belumpunyaakun"
            android:textColor="#fff"
            android:letterSpacing="0.025"
            android:textSize="14dp"
            />
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftarsekarang"
            android:textSize="14dp"
            android:textColor="#fff"
            android:letterSpacing="0.025"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>






    </LinearLayout>

</LinearLayout>
